# gpt-oss-use-cases

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: example_config.yaml
examples/: basic_inference.py  gpt_oss_inference.py  multi_provider_example.py  ollama_gpt_oss.py  openrouter_gpt_oss.py  vllm_gpt_oss.py
src/: __init__.py
src/handlers/: chain_of_thought.py
src/models/: __init__.py  inference.py  loader.py
src/providers/: __init__.py  base.py  factory.py
src/providers/ollama/: provider.py
src/providers/openrouter/: provider.py
src/providers/pytorch/: provider.py
src/providers/vllm/: provider.py
src/training/: fine_tuner.py
src/utils/: __init__.py  config.py  logging.py
tests/: test_model_loader.py
